Closed Bug 487765 Opened 16 years ago Closed 16 years ago

qcms failed to compile on Solaris

Categories

(Core :: Graphics: Color Management, defect)

All
OpenSolaris
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: ginnchen+exoracle, Assigned: ginnchen+exoracle)

References

Details

(Keywords: fixed1.9.1)

Attachments

(2 files, 1 obsolete file)

There are 2 problems. 1) LITTLE_ENDIAN/BIG_ENDIAN is not defined 2) int_types.h defines uintptr_t as unsigned int, but prtypes.h defines PRUptrdiff as unsinged long. so typedef PRUptrdiff uintptr_t is an error. int8_t is similar, PRInt8 is signed char, but int_types.h defines int8_t as char.
I saw we have 487566, 487754. I think we should fix them all together. For problem 1) (include prtypes.h) #ifdef IS_LITTLE_ENDIAN #define LITTLE_ENDIAN #endif #ifdef IS_BIG_ENDIAN #define BIG_ENDIAN #endif For problem 2) If the system has <inttypes.h> or <stdint.h> why would we redefine them from PR* ?
Blocks: 481926
Attached patch Fix build problems on solaris (obsolete) — Splinter Review
Does this patch fix it?
Attached patch patchSplinter Review
I changed your patch a bit to make it work.
Attachment #372434 - Attachment is obsolete: true
Attachment #372555 - Flags: review?(jmuizelaar)
Comment on attachment 372555 [details] [diff] [review] patch Looks good to me.
Attachment #372555 - Flags: review?(jmuizelaar) → review+
Status: NEW → RESOLVED
Closed: 16 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Assignee: nobody → ginn.chen
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: