Bug 487765 - Fix qcms build problems on Solaris. r=jrmuizel