gfx/qcms/iccread.c
@@ -29,16 +29,6 @@
 typedef uint32_t __be32;
 typedef uint16_t __be16;
 
-/* all of the platforms that we use _MSC_VER on are little endian
- * so this is sufficient for now */
-#ifdef _MSC_VER
-#define LITTLE_ENDIAN
-#endif
-
-#ifdef __OS2__
-#define LITTLE_ENDIAN
-#endif
-
 #if !defined(BIG_ENDIAN) && !defined(LITTLE_ENDIAN)
 #error Unknown endianess
 #endif
